--- a/modelTraining/modelTrainingMarius.ipynb
+++ b/modelTraining/modelTrainingMarius.ipynb
@@ -8,17 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "# Import all necessary modules \n",
-    "\n",
-    "import warnings # Supress unnecessary warnings so that presentation looks clean\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "\n",
-    "# Import all individual methods\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "# import classifiers & modules"
    ]
   },
   {
@@ -27,25 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Run Data Exploration\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run Data Preprocessing and Feature Generation\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Model Selection"
+    "# get Features - method "
    ]
   },
   {
@@ -54,25 +26,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Model Training"
+    "# CLASSIFIER 1\n",
+    "def classifier1_replace_name():\n",
+    "# Model and hyperparameter selection\n",
+    "# Model Training  \n",
+    "    pass    \n",
+    "# return output for evaluation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Model Evaluation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Model Interpretation\n"
+    "\n"
    ]
   }
  ],
