--- a/modelEvaluation.ipynb
+++ b/modelEvaluation.ipynb
@@ -2,12 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# test function\n",
+    "def testFunction(argument):\n",
+    "    print('Your argument: ' + argument)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Confusion Matrix Report (from Exercise 3)\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.utils.multiclass import unique_labels\n",
+    "\n",
+    "def confusion_matrix_report(y_true, y_pred):    \n",
+    "    cm, labels = confusion_matrix(y_true, y_pred), unique_labels(y_true, y_pred)\n",
+    "    column_width = max([len(str(x)) for x in labels] + [5])  # 5 is value length\n",
+    "    report = \" \" * column_width + \" \" + \"{:_^{}}\".format(\"Prediction\", column_width * len(labels))+ \"\\n\"\n",
+    "    report += \" \" * column_width + \" \".join([\"{:>{}}\".format(label, column_width) for label in labels]) + \"\\n\"\n",
+    "    for i, label1 in enumerate(labels):\n",
+    "        report += \"{:>{}}\".format(label1, column_width) + \" \".join([\"{:{}d}\".format(cm[i, j], column_width) for j in range(len(labels))]) + \"\\n\"\n",
+    "    return report"
+   ]
   }
  ],
  "metadata": {
