--- a/DataExploration.ipynb
+++ b/DataExploration.ipynb
@@ -20,6 +20,16 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
+    "__author__ = \"Maximillian Philipp Barth\"\n",
+    "\n",
+    "######################################### DISCLAIMER ###############################################\n",
+    "\n",
+    "# This class features the data exploration. Detailled interpretations can be found in the project\n",
+    "# report\n",
+    "\n",
+    "####################################################################################################\n",
+    "\n",
+    "\n",
     "# Import needed packages needed for EDA\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -49,14 +59,8 @@
     }
    ],
    "source": [
-    "from datetime import datetime\n",
-    "from sklearn.metrics import mean_absolute_error, accuracy_score, average_precision_score, recall_score, confusion_matrix\n",
-    "from scipy.stats import skew, boxcox\n",
-    "from sklearn import preprocessing\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split, StratifiedKFold, KFold\n",
+    "from scipy.stats import skew\n",
     "\n",
-    "import itertools\n",
     "\n",
     "if bankingcalldata.isnull().values.any() == True:\n",
     "    print('There are missing values in the dataset.')\n",
