--- a/DataExploration.ipynb
+++ b/DataExploration.ipynb
@@ -25,7 +25,7 @@
     "######################################### DISCLAIMER ###############################################\n",
     "\n",
     "# This class features the data exploration. Detailled interpretations can be found in the project\n",
-    "# report\n",
+    "# report. For reference the plots are as PNG files in the \"Plots from DataExploration\" folder\n",
     "\n",
     "####################################################################################################\n",
     "\n",
